--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     
     <title>Webpage Design</title>
-    <link rel="stylesheet" href="style.css ">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
    <div class="main">
