--- a/index.html
+++ b/index.html
@@ -25,6 +25,32 @@
             <a href="#"><button class="btn">search</button></a>
         </div>
     </div>
+    <div class="content">
+
+        <h1>Web Design& <br><span>development</span><br>course</h1>
+        <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt neque 
+            expedita atque eveniet <br> quis nesciunt. Quos nulla vero consequuntur, fugit nemo ad delectus 
+           <br> a quae totam ipsa illum minus laudantium?</p>
+           <button class="cn"><a href="#">join us</a></button>
+           <div class="form">
+            <h2>Login </h2>
+            <input type="email" name="email" placeholder="Enetr Email"> 
+            <input type="password" name="" placeholder="Enetr password">
+            <button class="btnn"><a href="#">Login</a></button>
+
+            <p class="link">Don't have an account<br>
+            <a href="#">sign up</a> here</a></p>
+            <p class="liw">log in with</p>
+            <div class="icon">
+                <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-google"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-skype"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+            </div>
+           </div>
+    </div>
    </div> 
+   <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
