--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
 
     <title>Webpage Design</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <link rel="stylesheet" href="assets/css/style.css">
+
     <!-- add a icon for the webpage -->
 </head>
 
@@ -14,16 +17,17 @@
             <div class="icon">
                 <h2 class="logo">PraRoz</h2>
             </div>
-            <div class="meun">
+           <div class="meun">
                 <ul>
                     <!-- add a supnav bar to a navbar (optional this will be posible with bootstrap ) -->
-                    <li><a href="#">HOME</a></li>
+                 <!---->   <li><a href="#">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">SERVICE</a></li>
                     <li><a href="#">DESIGE</a></li>
                     <li><a href="#">CONTACT</a></li>
                 </ul>
             </div>
+            
             <div class="search">
                 <!-- make the input with a white color  -->
                 <input class="srch" type="search" name="" placeholder="Type  To text ">
@@ -47,7 +51,7 @@
                 <p class="link">Don't have an account<br>
                     <a href="#">sign up</a> here</a>
                 </p>
-                <p class="liw">log in with</p>
+                <p,, class="liw">log in with</p>
                 <div class="icon">
                     <!-- make this in the center -->
                     <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
@@ -60,6 +64,7 @@
         </div>
         <!-- add a footer  -->
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 
